--- a/web-packages/demo/html/post-processing.html
+++ b/web-packages/demo/html/post-processing.html
@@ -36,5 +36,15 @@
 <div class="am-whitespace ws25px"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
 <script type="module" src="../src/post-processing.ts"></script>
+
+<style>
+  #advjs-blender-ui-container {
+    position: fixed;
+    width: 300px;
+    top: 0;
+    left: 0;
+  }
+</style>
+
 </body>
 </html>
