feat: switch to lil gui

--- a/web-packages/demo/html/custom-material.html
+++ b/web-packages/demo/html/custom-material.html
@@ -50,7 +50,10 @@
   </div>
 
   <!-- <button id="J-compileBtn" class="button">Compile</button> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lil-gui@0.19"></script>
+  <script>
+  let GUI = lil.GUI;
+  </script>
   <script type="module" src="../src/custom-material.ts"></script>
 </body>
 </html>
