--- a/web-packages/demo/html/post-processing.html
+++ b/web-packages/demo/html/post-processing.html
@@ -40,7 +40,10 @@
  <div class="am-flexbox-item"></div>
 </div>
 <div class="am-whitespace ws25px"></div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/lil-gui@0.19"></script>
+  <script>
+  let GUI = lil.GUI;
+  </script>
 <script type="module" src="../src/post-processing.ts"></script>
 
 </body>
