--- a/web-packages/devtools/index.html
+++ b/web-packages/devtools/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="https://cdn.jsdelivr.net/npm/lil-gui@0.19"></script>
+    <script>
+    let GUI = lil.GUI;
+    </script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
