chore: update case test

--- a/web-packages/test/case/3d/index.html
+++ b/web-packages/test/case/3d/index.html
@@ -28,8 +28,7 @@
   mocha.setup({
     ui: 'bdd',
     globals: [
-      '__core-js_shared__', 'core', 'LiveReload', 'Mars', 'MarsFilters', 'MarsModel',
-      '__MarsConfig__', '__vite_is_modern_browser', 'MarsSpine', 'mars'
+      '__core-js_shared__', 'core', 'LiveReload', 'ge'
     ]
   });
   mocha.checkLeaks();
