--- a/web-packages/test/case/all/index.html
+++ b/web-packages/test/case/all/index.html
@@ -27,10 +27,7 @@
 <script class="mocha-init">
   mocha.setup({
     ui: 'bdd',
-    globals: [
-      '__core-js_shared__', 'core', 'LiveReload', 'Mars', 'MarsFilters', 'MarsModel',
-      '__MarsConfig__', '__vite_is_modern_browser', 'mars'
-    ]
+    globals: ['__core-js_shared__', 'core', 'LiveReload', 'ge',]
   });
   mocha.checkLeaks();
 </script>
