--- a/web-packages/test/case/all/src/3d.html
+++ b/web-packages/test/case/all/src/3d.html
@@ -17,15 +17,7 @@
     mocha.setup({
       ui: 'bdd',
       globals: [
-        '__core-js_shared__',
-        'core',
-        'LiveReload',
-        'Mars',
-        'MarsFilters',
-        '__MarsConfig__',
-        'MarsModel',
-        'MarsSpine',
-        'mars'
+        '__core-js_shared__', 'core', 'LiveReload', 'ge',
       ]
     });
     mocha.checkLeaks();
