--- a/web-packages/test/case/spine/index.html
+++ b/web-packages/test/case/spine/index.html
@@ -14,7 +14,7 @@
 <script src="https://unpkg.com/chai-spies@1.0.0/chai-spies.js"></script>
 <script src="https://unpkg.com/mocha@10.2.0/mocha.js"></script>
 <script class="mocha-init">
-  mocha.setup({ ui: 'bdd', globals: ['__core-js_shared__', 'core', 'LiveReload', 'Mars', 'MarsFilters', '__MarsConfig__', 'MarsSpine', 'MarsModel', 'mars']});
+  mocha.setup({ ui: 'bdd', globals: ['__core-js_shared__', 'core', 'LiveReload', 'ge']});
   mocha.checkLeaks();
 </script>
 <script>
