chore: update demo

--- a/plugin-packages/alipay-downgrade/demo/index.html
+++ b/plugin-packages/alipay-downgrade/demo/index.html
@@ -15,6 +15,10 @@
       <div class="am-list-content">简单使用</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
+    <a href="mock-fail.html" class="am-list-item">
+      <div class="am-list-content">Mock Fail</div>
+      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
+    </a>
     <a href="status.html" class="am-list-item">
       <div class="am-list-content">降级状态</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
