--- a/plugin-packages/alipay-downgrade/demo/simple.html
+++ b/plugin-packages/alipay-downgrade/demo/simple.html
@@ -15,6 +15,17 @@
 </head>
 <body>
 <div class="container" id="J-container"></div>
+<script>
+  window.addEventListener('error',function (e){
+    // Demo出错时Windows和Mac不弹窗
+    const platform = navigator.platform.toLowerCase();
+    if (platform.search('win') >= 0 || platform.search('mac') >= 0) {
+      return;
+    }
+
+    alert(e.message);
+  })
+</script>
 <script type="module" src="./src/simple.ts"></script>
 </body>
 </html>
