--- a/plugin-packages/alipay-downgrade/demo/mock-fail.html
+++ b/plugin-packages/alipay-downgrade/demo/mock-fail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>简单使用 - 降级插件 - Galacean Effects demo</title>
+  <title>mock fail - 降级插件 - Galacean Effects demo</title>
   <style>
     html, body, div, canvas { margin: 0; padding: 0; }
     .container {
