--- a/plugin-packages/alipay-downgrade/demo/simple.html
+++ b/plugin-packages/alipay-downgrade/demo/simple.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 <div class="container" id="J-container"></div>
+<div>降级结果：<pre id="J-downgradeResult"></pre></div>
+<div>错误信息：<pre id="J-errorMessage"></pre></div>
 <script>
   window.addEventListener('error',function (e){
     // Demo出错时Windows和Mac不弹窗
