--- a/plugin-packages/alipay-downgrade/demo/status.html
+++ b/plugin-packages/alipay-downgrade/demo/status.html
@@ -14,6 +14,8 @@
   </style>
 </head>
 <body>
+<div id="J-downgradeResult"></div>
+<div id="J-downgradeDecision"></div>
 <script>
   window.addEventListener('error',function (e){
     // Demo出错时Windows和Mac不弹窗
