--- a/plugin-packages/downgrade/demo/index.html
+++ b/plugin-packages/downgrade/demo/index.html
@@ -34,6 +34,10 @@
       <div class="am-list-content">降级状态</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
+    <a href="ua-parser.html" class="am-list-item">
+      <div class="am-list-content">UA解析</div>
+      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
+    </a>
   </div>
 </div>
 </body>
