chore: trigger webgl context lost by allocate texture memory

--- a/web-packages/demo/html/context-lost-restore.html
+++ b/web-packages/demo/html/context-lost-restore.html
@@ -18,6 +18,7 @@
 <div>
   <button type="button" id="J-lost">WebGL Context Lost</button>
   <button type="button" disabled id="J-restore">WebGL Context Restore</button>
+  <button type="button" id="J-memory">Lost by memory</button>
 </div>
 <div id="J-gpuInfo"></div>
 <script type="module" src="../src/context-lost-restore.ts"></script>
