--- a/web-packages/demo/index.html
+++ b/web-packages/demo/index.html
@@ -35,6 +35,14 @@
       <div class="am-list-content">加载本地文件</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
+    <a href="html/dynamic-image.html" class="am-list-item">
+      <div class="am-list-content">动态换图</div>
+      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
+    </a>
+    <a href="html/dynamic-video.html" class="am-list-item">
+      <div class="am-list-content">动态视频</div>
+      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
+    </a>
   </div>
   <div class="am-list-header">Inspire compare Demo</div>
   <div class="am-list-body">
