--- a/web-packages/demo/index.html
+++ b/web-packages/demo/index.html
@@ -35,6 +35,10 @@
       <div class="am-list-content">加载本地文件</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
+    <a href="html/render-level.html" class="am-list-item">
+      <div class="am-list-content">分层渲染</div>
+      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
+    </a>
   </div>
   <div class="am-list-header">Inspire compare Demo</div>
   <div class="am-list-body">
