--- a/web-packages/demo/html/render-level.html
+++ b/web-packages/demo/html/render-level.html
@@ -17,7 +17,7 @@
 <div class="container" id="J-container"></div>
 <select id="J-select">
   <option value="B+">全部机型</option>
-  <option value="B">B（低端机）</option>
+  <option value="B" selected>B（低端机）</option>
   <option value="A">A（中端机）</option>
   <option value="S">S（高端机）</option>
 </select>
