chore: 优化 loadScene 的 renderLevel 类型

--- a/web-packages/demo/html/render-level.html
+++ b/web-packages/demo/html/render-level.html
@@ -14,13 +14,13 @@
   </style>
 </head>
 <body>
-<div class="container" id="J-container"></div>
 <select id="J-select">
-  <option value="B+">全部机型</option>
+  <option value="">全部机型</option>
   <option value="B" selected>B（低端机）</option>
   <option value="A">A（中端机）</option>
   <option value="S">S（高端机）</option>
 </select>
+<div class="container" id="J-container"></div>
 
 <script type="module" src="../src/render-level.ts"></script>
 </body>
