--- a/web-packages/demo/index.html
+++ b/web-packages/demo/index.html
@@ -11,64 +11,25 @@
 <div class="am-list">
   <div class="am-list-header">Runtime Demo</div>
   <div class="am-list-body">
-    <a href="html/single.html" class="am-list-item">
-      <div class="am-list-content">单项目测试</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="html/post-processing.html" class="am-list-item">
-      <div class="am-list-content">后处理测试</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="html/dashboard.html" class="am-list-item">
-      <div class="am-list-content">Dashboard</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="html/compressed.html" class="am-list-item">
-      <div class="am-list-content">压缩纹理</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="html/context-lost-restore.html" class="am-list-item">
-      <div class="am-list-content">WebGL Context Lost/Restore</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="html/local-file.html" class="am-list-item">
-      <div class="am-list-content">加载本地文件</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="html/dynamic-image.html" class="am-list-item">
-      <div class="am-list-content">动态换图</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="html/dynamic-video.html" class="am-list-item">
-      <div class="am-list-content">动态视频</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="html/render-level.html" class="am-list-item">
-      <div class="am-list-content">分层渲染</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
+    <a class="am-list-item" href="html/single.html">单项目测试</a>
+    <a class="am-list-item" href="html/post-processing.html">后处理测试</a>
+    <a class="am-list-item" href="html/dashboard.html">Dashboard</a>
+    <a class="am-list-item" href="html/compressed.html">压缩纹理</a>
+    <a class="am-list-item" href="html/context-lost-restore.html">WebGL Context Lost/Restore</a>
+    <a class="am-list-item" href="html/local-file.html">加载本地文件</a>
+    <a class="am-list-item" href="html/dynamic-image.html">动态换图</a>
+    <a class="am-list-item" href="html/dynamic-video.html">动态视频</a>
+    <a class="am-list-item" href="html/render-level.html">分层渲染</a>
   </div>
   <div class="am-list-header">Inspire compare Demo</div>
   <div class="am-list-body">
-    <a href="html/inspire/index.html" class="am-list-item">
-      <div class="am-list-content">灵感测试页面</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
+    <a class="am-list-item" href="html/inspire/index.html">灵感测试页面</a>
   </div>
   <div class="am-list-header">ThreeJS Plugin Demo</div>
   <div class="am-list-body">
-    <a href="html/three-sprite.html" class="am-list-item">
-      <div class="am-list-content">ThreeJS Sprite</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="html/three-particle.html" class="am-list-item">
-      <div class="am-list-content">ThreeJS Particle</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="html/threejs-large-scene.html" class="am-list-item">
-      <div class="am-list-content">ThreeJS Large Scene</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
+    <a class="am-list-item" href="html/three-sprite.html">ThreeJS Sprite</a>
+    <a class="am-list-item" href="html/three-particle.html">ThreeJS Particle</a>
+    <a class="am-list-item" href="html/threejs-large-scene.html">ThreeJS Large Scene</a>
   </div>
 </div>
 </body>
