feat: 更新 inspire 示例的 pre player 版本

--- a/web-packages/demo/html/inspire/pre-player.html
+++ b/web-packages/demo/html/inspire/pre-player.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 <div id="J-container" class="cell"></div>
-<script src="https://gw.alipayobjects.com/os/lib/alipay/mars-player/1.3.4/dist/index.js"></script>
-<script src="https://gw.alipayobjects.com/os/lib/alipay/mars-player/1.3.4/dist/filters.js"></script>
-<script src="https://gw.alipayobjects.com/os/lib/alipay/mars-plugin-orientation-transformer/1.2.1/dist/index.min.js"></script>
-<script src="https://gw.alipayobjects.com/render/p/yuyan_npm/@alipay_mars-plugin-model/1.1.0/dist/index.min.js"></script>
+<script src="https://unpkg.com/@galacean/effects@1.5.1/dist/index.min.js"></script>
+<script src="https://unpkg.com/@galacean/effects-plugin-spine@1.5.1/dist/index.min.js"></script>
+<script src="https://unpkg.com/@galacean/effects-plugin-model@1.5.1/dist/index.min.js"></script>
+<script src="https://unpkg.com/@galacean/effects-plugin-orientation-transformer@1.5.1/dist/index.min.js"></script>
 <script type="module" src="../../src/inspire/pre-player.ts"></script>
 </body>
 </html>
