fix: update downgrade plugin

--- a/plugin-packages/alipay-downgrade/demo/status.html
+++ b/plugin-packages/alipay-downgrade/demo/status.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div id="J-downgradeResult"></div>
-<div id="J-downgradeDecision"></div>
+<div id="J-errorMessage"></div>
 <script>
   window.addEventListener('error',function (e){
     // Demo出错时Windows和Mac不弹窗
