build: update config

--- a/plugin-packages/downgrade/demo/ua-parser.html
+++ b/plugin-packages/downgrade/demo/ua-parser.html
@@ -25,6 +25,7 @@
     alert(e.message);
   })
 </script>
+<script src="https://unpkg.com/ua-parser-js@1.0.38/dist/ua-parser.min.js"></script>
 <script type="module" src="./src/ua-parser.ts"></script>
 </body>
 </html>
