fix: update ua decoder

--- a/plugin-packages/downgrade/demo/index.html
+++ b/plugin-packages/downgrade/demo/index.html
@@ -42,6 +42,10 @@
       <div class="am-list-content">UA解析</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
+    <a href="ua-info.html" class="am-list-item">
+      <div class="am-list-content">UA列表</div>
+      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
+    </a>
   </div>
 </div>
 </body>
