--- a/plugin-packages/downgrade/demo/index.html
+++ b/plugin-packages/downgrade/demo/index.html
@@ -38,6 +38,10 @@
       <div class="am-list-content">小程序</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
+    <a href="alipay-mini-app.html" class="am-list-item">
+      <div class="am-list-content">支付宝小程序</div>
+      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
+    </a>
     <a href="ua-parser.html" class="am-list-item">
       <div class="am-list-content">UA解析</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
