fix: update plugin

--- a/plugin-packages/downgrade/demo/index.html
+++ b/plugin-packages/downgrade/demo/index.html
@@ -30,24 +30,16 @@
       <div class="am-list-content">Mock Fail</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
-    <a href="status.html" class="am-list-item">
-      <div class="am-list-content">降级状态</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="miniprogram.html" class="am-list-item">
-      <div class="am-list-content">小程序</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
     <a href="alipay-mini-app.html" class="am-list-item">
       <div class="am-list-content">支付宝小程序</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
-    <a href="ua-parser.html" class="am-list-item">
-      <div class="am-list-content">UA解析</div>
+    <a href="wechat-mini-app.html" class="am-list-item">
+      <div class="am-list-content">微信小程序</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
-    <a href="ua-info.html" class="am-list-item">
-      <div class="am-list-content">UA列表</div>
+    <a href="user-agent.html" class="am-list-item">
+      <div class="am-list-content">UserAgent</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
   </div>
