--- a/plugin-packages/downgrade/demo/user-agent.html
+++ b/plugin-packages/downgrade/demo/user-agent.html
@@ -26,6 +26,6 @@
   })
 </script>
 <script src="https://unpkg.com/ua-parser-js@1.0.38/dist/ua-parser.min.js"></script>
-<script type="module" src="./src/ua-parser.ts"></script>
+<script type="module" src="./src/user-agent.ts"></script>
 </body>
 </html>
