--- a/plugin-packages/downgrade/demo/wechat-mini-app.html
+++ b/plugin-packages/downgrade/demo/wechat-mini-app.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UA解析 - 降级插件 - Galacean Effects demo</title>
+  <title>简单使用 - 降级插件 - Galacean Effects demo</title>
   <style>
     html, body, div, canvas { margin: 0; padding: 0; }
     .container {
@@ -25,7 +25,6 @@
     alert(e.message);
   })
 </script>
-<script src="https://unpkg.com/ua-parser-js@1.0.38/dist/ua-parser.min.js"></script>
-<script type="module" src="./src/ua-info.ts"></script>
+<script type="module" src="./src/wechat-mini-app.ts"></script>
 </body>
 </html>
