chore: downgrade 插件代码优化

--- a/plugin-packages/downgrade/demo/index.html
+++ b/plugin-packages/downgrade/demo/index.html
@@ -22,26 +22,11 @@
 <div class="am-list">
   <div class="am-list-header">降级插件 Demo</div>
   <div class="am-list-body">
-    <a href="simple.html" class="am-list-item">
-      <div class="am-list-content">简单使用</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="mock-fail.html" class="am-list-item">
-      <div class="am-list-content">Mock Fail</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="user-agent.html" class="am-list-item">
-      <div class="am-list-content">User Agent</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="alipay-mini-app.html" class="am-list-item">
-      <div class="am-list-content">支付宝小程序</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="wechat-mini-app.html" class="am-list-item">
-      <div class="am-list-content">微信小程序</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
+    <a href="simple.html" class="am-list-item">简单使用</a>
+    <a href="mock-fail.html" class="am-list-item">Mock Fail</a>
+    <a href="user-agent.html" class="am-list-item">User Agent</a>
+    <a href="mp-alipay.html" class="am-list-item">支付宝小程序</a>
+    <a href="mp-wechat.html" class="am-list-item">微信小程序</a>
   </div>
 </div>
 </body>
