--- a/plugin-packages/downgrade/demo/mock-fail.html
+++ b/plugin-packages/downgrade/demo/mock-fail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>简单使用 - 降级插件 - Galacean Effects demo</title>
+  <title>Mock Fail - 降级插件 - Galacean Effects demo</title>
   <style>
     html, body, div, canvas { margin: 0; padding: 0; }
     .container {
@@ -16,7 +16,7 @@
 <body>
 <div class="container" id="J-container"></div>
 <script>
-  window.addEventListener('error',function (e){
+  window.addEventListener('error', function (e){
     // Demo出错时Windows和Mac不弹窗
     const platform = navigator.platform.toLowerCase();
     if (platform.search('win') >= 0 || platform.search('mac') >= 0) {
