--- a/plugin-packages/alipay-downgrade/demo/index.html
+++ b/plugin-packages/alipay-downgrade/demo/index.html
@@ -22,18 +22,9 @@
 <div class="am-list">
   <div class="am-list-header">降级插件 Demo</div>
   <div class="am-list-body">
-    <a href="simple.html" class="am-list-item">
-      <div class="am-list-content">简单使用</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="mock-fail.html" class="am-list-item">
-      <div class="am-list-content">Mock Fail</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="status.html" class="am-list-item">
-      <div class="am-list-content">降级状态</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
+    <a href="simple.html" class="am-list-item">简单使用</a>
+    <a href="mock-fail.html" class="am-list-item">Mock Fail</a>
+    <a href="status.html" class="am-list-item">降级状态</a>
   </div>
 </div>
 </body>
