--- a/plugin-packages/downgrade/demo/mp-alipay.html
+++ b/plugin-packages/downgrade/demo/mp-alipay.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>简单使用 - 降级插件 - Galacean Effects demo</title>
+  <title>支付宝小程序 - 降级插件 - Galacean Effects demo</title>
   <style>
     html, body, div, canvas { margin: 0; padding: 0; }
     .container {
@@ -15,7 +15,7 @@
 </head>
 <body>
 <script>
-  window.addEventListener('error',function (e){
+  window.addEventListener('error', function (e){
     // Demo出错时Windows和Mac不弹窗
     const platform = navigator.platform.toLowerCase();
     if (platform.search('win') >= 0 || platform.search('mac') >= 0) {
@@ -25,6 +25,6 @@
     alert(e.message);
   })
 </script>
-<script type="module" src="./src/wechat-mini-app.ts"></script>
+<script type="module" src="./src/mp-alipay.ts"></script>
 </body>
 </html>
