--- a/plugin-packages/stats/demo/index.html
+++ b/plugin-packages/stats/demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>降级插件 - Galacean Effects demo</title>
+<title>Stats 插件 - Galacean Effects demo</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <!-- 主文件 -->
 <link rel="stylesheet" href="https://gw.alipayobjects.com/as/g/antui/antui/10.1.32/dpl/antui.css"/>
