chore: 优化 message 事件

--- a/web-packages/demo/index.html
+++ b/web-packages/demo/index.html
@@ -14,6 +14,7 @@
     <a class="am-list-item" href="html/single.html">单项目测试</a>
     <a class="am-list-item" href="html/post-processing.html">后处理测试</a>
     <a class="am-list-item" href="html/dashboard.html">Dashboard</a>
+    <a class="am-list-item" href="html/interactive.html">Interactive</a>
     <a class="am-list-item" href="html/compressed.html">压缩纹理</a>
     <a class="am-list-item" href="html/context-lost-restore.html">WebGL Context Lost/Restore</a>
     <a class="am-list-item" href="html/local-file.html">加载本地文件</a>
