--- a/web-packages/test/index.html
+++ b/web-packages/test/index.html
@@ -10,18 +10,9 @@
 <body>
 <div class="am-list">
   <div class="am-list-body">
-    <a href="unit/index.html" class="am-list-item">
-      <div class="am-list-content">单元测试</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="case/index.html" class="am-list-item">
-      <div class="am-list-content">帧对比测试</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="memory/index.html" class="am-list-item">
-      <div class="am-list-content">显存泄漏测试</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
+    <a href="unit/index.html" class="am-list-item">单元测试</a>
+    <a href="case/index.html" class="am-list-item">帧对比测试</a>
+    <a href="memory/index.html" class="am-list-item">显存泄漏测试</a>
   </div>
 </div>
 </body>
