--- a/web-packages/demo/html/interactive.html
+++ b/web-packages/demo/html/interactive.html
@@ -14,6 +14,11 @@
   </style>
 </head>
 <body>
+<div>
+  <button id="J-pauseBtn">暂停</button>
+  <button id="J-resumeBtn">恢复播放</button>
+  <span id="J-playerState"></span>
+</div>
 <div class="container" id="J-container"></div>
 
 <script type="module" src="../src/interactive.ts"></script>
