chore: 优化 variable text 更新逻辑，增加相关 demo

--- a/web-packages/demo/index.html
+++ b/web-packages/demo/index.html
@@ -21,6 +21,7 @@
     <a class="am-list-item" href="html/dynamic-image.html">动态换图</a>
     <a class="am-list-item" href="html/dynamic-video.html">动态视频</a>
     <a class="am-list-item" href="html/render-level.html">分层渲染</a>
+    <a class="am-list-item" href="html/text.html">文本元素</a>
   </div>
   <div class="am-list-header">Inspire compare Demo</div>
   <div class="am-list-body">
