fix: update status

--- a/plugin-packages/alipay-downgrade/demo/status.html
+++ b/plugin-packages/alipay-downgrade/demo/status.html
@@ -14,6 +14,19 @@
   </style>
 </head>
 <body>
+<div id="J-downgradeResult"></div>
+<div id="J-errorMessage"></div>
+<script>
+  window.addEventListener('error',function (e){
+    // Demo出错时Windows和Mac不弹窗
+    const platform = navigator.platform.toLowerCase();
+    if (platform.search('win') >= 0 || platform.search('mac') >= 0) {
+      return;
+    }
+
+    alert(e.message);
+  })
+</script>
 <script type="module" src="./src/status.ts"></script>
 </body>
 </html>
