feat(core): 增加 AssetManager 加载音视频能力
将和 Asset 相关的类移动至 Asset 文件夹下

--- a/plugin-packages/media/demo/simple.html
+++ b/plugin-packages/media/demo/simple.html
@@ -16,7 +16,7 @@
 <body>
 <div class="am-flexbox" style="align-items: start;">
   <div class="container" id="J-container"></div>
-  <div class="am-wingblank" id="J-op" style="width: 460px;">
+  <!-- <div class="am-wingblank" id="J-op" style="width: 460px;">
     <div class="am-list">
       <div class="am-list-body">
         <div class="am-list-item">
@@ -85,7 +85,7 @@
     </div>
     </div>
   </div>
-  <div class="am-flexbox-item"></div>
+  <div class="am-flexbox-item"></div> -->
 </div>
 <script type="module" src="./src/simple.ts"></script>
 </body>
