refactor(core/media): 解藕 TextComponent 和 SpriteComponent 的绑定关系

--- a/plugin-packages/media/demo/index.html
+++ b/plugin-packages/media/demo/index.html
@@ -11,7 +11,7 @@
 <div class="am-list">
   <div class="am-list-header">Media 插件 Demo</div>
   <div class="am-list-body">
-    <a href="simple.html" class="am-list-item">
+    <a href="video.html" class="am-list-item">
       <div class="am-list-content">简单使用</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
