--- a/plugin-packages/media/demo/video.html
+++ b/plugin-packages/media/demo/video.html
@@ -87,6 +87,6 @@
   </div>
   <div class="am-flexbox-item"></div> -->
 </div>
-<script type="module" src="./src/simple.ts"></script>
+<script type="module" src="./src/video.ts"></script>
 </body>
 </html>
