--- a/web-packages/demo/index.html
+++ b/web-packages/demo/index.html
@@ -13,6 +13,7 @@
   <div class="am-list-body">
     <a class="am-list-item" href="html/single.html">单项目测试</a>
     <a class="am-list-item" href="html/post-processing.html">后处理测试</a>
+    <a class="am-list-item" href="html/shader-compile.html">Shader 编译测试</a>
     <a class="am-list-item" href="html/dashboard.html">Dashboard</a>
     <a class="am-list-item" href="html/interactive.html">Interactive</a>
     <a class="am-list-item" href="html/compressed.html">压缩纹理</a>
