--- a/plugin-packages/media/demo/index.html
+++ b/plugin-packages/media/demo/index.html
@@ -12,7 +12,11 @@
   <div class="am-list-header">Media 插件 Demo</div>
   <div class="am-list-body">
     <a href="video.html" class="am-list-item">
-      <div class="am-list-content">简单使用</div>
+      <div class="am-list-content">视频使用</div>
+      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
+    </a>
+    <a href="audio.html" class="am-list-item">
+      <div class="am-list-content">音频使用</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
   </div>
