--- a/web-packages/demo/html/shape.html
+++ b/web-packages/demo/html/shape.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>文本元素 - demo</title>
+  <title>图形元素 - demo</title>
   <style>
     html, body, div, canvas { margin: 0; padding: 0; }
     .container {
