chore: 优化 multimedia 插件的资源处理逻辑

--- a/plugin-packages/multimedia/demo/index.html
+++ b/plugin-packages/multimedia/demo/index.html
@@ -2,23 +2,17 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Media 插件 - demo</title>
+<title>Multimedia 插件 - demo</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <!-- 主文件 -->
 <link rel="stylesheet" href="https://gw.alipayobjects.com/as/g/antui/antui/10.1.32/dpl/antui.css"/>
 </head>
 <body>
 <div class="am-list">
-  <div class="am-list-header">Media 插件 Demo</div>
+  <div class="am-list-header">Multimedia 插件 Demo</div>
   <div class="am-list-body">
-    <a href="video.html" class="am-list-item">
-      <div class="am-list-content">视频使用</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
-    <a href="audio.html" class="am-list-item">
-      <div class="am-list-content">音频使用</div>
-      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
-    </a>
+    <a href="video.html" class="am-list-item">视频使用</a>
+    <a href="audio.html" class="am-list-item">音频使用</a>
   </div>
 </div>
 </body>
