refactor: 优化多媒体插件的音频处理逻辑

--- a/plugin-packages/multimedia/demo/audio.html
+++ b/plugin-packages/multimedia/demo/audio.html
@@ -19,7 +19,7 @@
 
   <div class="am-flexbox-item">
     <div>
-      <input type="text" id="J-input" style="width: 98%" value="https://mass-office.alipay.com/huamei_koqzbu/afts/file/H9slSL9LcesAAAAAAAAAABAADnV5AQBr" placeholder="音频链接" />
+      <input type="text" id="J-input" style="width: 98%" value="https://mdn.alipayobjects.com/huamei_s9rwo4/afts/file/A*zERYT5qS-7kAAAAAAAAAAAAADiqKAQ" placeholder="音频链接" />
     </div>
     <div>
       <button id="J-add" class="am-button tiny">添加 AudioComponent</button>
