--- a/web-packages/demo/html/post-processing.html
+++ b/web-packages/demo/html/post-processing.html
@@ -7,43 +7,41 @@
   <link rel="stylesheet" href="https://gw.alipayobjects.com/as/g/antui/antui/10.1.32/dpl/antui.css"/>
   <style>
     html, body, div, canvas { margin: 0; padding: 0; }
+    html, body {
+      height: 100%;
+      width: 100%;
+    }
     .container {
-      width: 1000px;
-      height: 600px;
       background-color: rgb(0, 0, 0);
+    }
+    .lil-gui.autoPlace {
+      top: unset;
+      bottom: 0;
     }
   </style>
 </head>
 <body>
+<div class="am-flexbox-v" style="height: 100%;">
+  <div class="container am-flexbox-item" id="J-container"></div>
 
-<div style="display:flex;">
-  <div id="advjs-blender-ui-container" style="width:300px;height:600px;overflow-y: auto;"></div>
-  <div class="container" id="J-container"></div>
-</div>
-
-<div class="am-whitespace ws15px"></div>
-<div class="am-flexbox am-wingblank wb10px" style="align-items: start">
-  <div class="am-wingblank wb10px">
-    <select id="J-select" size="12" style="min-width: 350px;"></select>
-  </div>
-  <div class="am-flexbox-item">
-    <div class="am-flexbox">
-      <div class="am-flexbox-item">
-        <button type="button" class="am-button" id="J-start">开始</button>
+  <div style="height: 370px">
+    <div class="am-whitespace ws15px"></div>
+    <div class="am-flexbox am-wingblank wb10px" style="align-items: start">
+      <div class="am-wingblank wb10px">
+        <select id="J-select" size="12" style="min-width: 240px;"></select>
       </div>
       <div class="am-flexbox-item">
-        <button type="button" class="am-button white" id="J-pause">暂停</button>
+        <button type="button" class="am-button" id="J-resume">重播</button>
       </div>
+    <div class="am-flexbox-item"></div>
     </div>
+    <div class="am-whitespace ws25px"></div>
   </div>
- <div class="am-flexbox-item"></div>
 </div>
-<div class="am-whitespace ws25px"></div>
-<script src="https://cdn.jsdelivr.net/npm/lil-gui@0.19"></script>
+<script src="https://unpkg.com/lil-gui@0.19.2/dist/lil-gui.umd.js"></script>
 <script>
-  let GUI = lil.GUI;
+  window.GUI = lil.GUI;
 </script>
 <script type="module" src="../src/post-processing.ts"></script>
-
 </body>
 </html>
