--- a/web-packages/demo/html/text.html
+++ b/web-packages/demo/html/text.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>富文本元素 - demo</title>
+  <title>文本元素 - demo</title>
   <style>
     html, body, div, canvas { margin: 0; padding: 0; }
     .container {
@@ -16,6 +16,6 @@
 <body>
 <div class="container" id="J-container"></div>
 
-<script type="module" src="../src/rich-text.ts"></script>
+<script type="module" src="../src/text.ts"></script>
 </body>
 </html>
