test(rich-text): 更新测试文件

--- a/plugin-packages/rich-text/test/index.html
+++ b/plugin-packages/rich-text/test/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Plugin Media Tests</title>
+  <title>Plugin RichText Tests</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/mocha@10.2.0/mocha.css">
   <!-- 主文件 -->
