feat: 增加富文本插件的小程序产物

--- a/plugin-packages/rich-text/demo/index.html
+++ b/plugin-packages/rich-text/demo/index.html
@@ -11,7 +11,7 @@
 <div class="am-list">
   <div class="am-list-header">RichText 插件 Demo</div>
   <div class="am-list-body">
-    <a href="rich-text.html" class="am-list-item">富文本demo</a>
+    <a href="./simple.html" class="am-list-item">基础使用</a>
   </div>
 </div>
 </body>
