--- a/plugin-packages/rich-text/demo/simple.html
+++ b/plugin-packages/rich-text/demo/simple.html
@@ -17,6 +17,6 @@
 <div class="am-flexbox" style="align-items: start;">
   <div class="container" id="J-container"></div>
 </div>
-<script type="module" src="./src/rich-text.ts"></script>
+<script type="module" src="./src/simple.ts"></script>
 </body>
 </html>
