test: 整理帧对比测试代码并完善类型

--- a/web-packages/test/case/3d/index.html
+++ b/web-packages/test/case/3d/index.html
@@ -28,7 +28,7 @@
   mocha.setup({
     ui: 'bdd',
     globals: [
-      '__core-js_shared__', 'core', 'LiveReload', 'ge'
+      '__core-js_shared__', 'core', 'LiveReload', 'ge', 'libtess'
     ]
   });
   mocha.checkLeaks();
