test: 整理并优化帧对比测试代码

--- a/web-packages/test/case/2d/index.html
+++ b/web-packages/test/case/2d/index.html
@@ -6,6 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Case - 2D Test</title>
   <link rel="stylesheet" href="https://unpkg.com/mocha@10.2.0/mocha.css">
+  <style>
+    li.idx {
+      height: 120px;
+      width: 100%;
+      overflow-x: auto;
+    }
+    li.idx .image-cell {
+      max-height: 120px;
+      display: flex;
+      flex-wrap: nowrap;
+    }
+    li.idx .image-cell img {
+      width: 120px;
+    }
+    li.idx .image-cell span {
+      border-left: 1px dashed yellowgreen;
+      margin: 0 2px;
+    }
+  </style>
 </head>
 <body>
   <div id="mocha"></div>
