test: 完善部分单测类型，优化帧对比失败提示

--- a/web-packages/test/case/all.html
+++ b/web-packages/test/case/all.html
@@ -6,6 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-<script type="module" src="./src/index.ts"></script>
+<script type="module" src="./src/all/index.ts"></script>
 </body>
 </html>
