--- a/web-packages/test/case/index.html
+++ b/web-packages/test/case/index.html
@@ -10,19 +10,19 @@
 <body>
 <div class="am-list">
   <div class="am-list-body">
-    <a href="2d/index.html" class="am-list-item">
+    <a href="2d.html" class="am-list-item">
       <div class="am-list-content">2D 测试</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
-    <a href="3d/index.html" class="am-list-item">
+    <a href="3d.html" class="am-list-item">
       <div class="am-list-content">3D 测试</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
-    <a href="spine/index.html" class="am-list-item">
+    <a href="spine.html" class="am-list-item">
       <div class="am-list-content">Spine 测试</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
-    <a href="all/index.html" class="am-list-item">
+    <a href="all.html" class="am-list-item">
       <div class="am-list-content">全部测试（多页面并行）</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
