chore: add hit test demo page

--- a/web-packages/demo/index.html
+++ b/web-packages/demo/index.html
@@ -24,6 +24,7 @@
     <a class="am-list-item" href="html/shape.html">图形元素</a>
     <a class="am-list-item" href="html/context-lost-restore.html">WebGL Context Lost/Restore</a>
     <a class="am-list-item" href="html/post-processing.html">后处理测试</a>
+    <a class="am-list-item" href="html/hit-test.html">射线碰撞检测测试</a>
   </div>
   <div class="am-list-header">Inspire compare Demo</div>
   <div class="am-list-body">
