--- a/web-packages/demo/html/hit-test.html
+++ b/web-packages/demo/html/hit-test.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>single - demo</title>
+  <title>hit-test - demo</title>
   <style>
     html, body, div, canvas { margin: 0; padding: 0; }
     .container {
