chore: add custom shader demo

--- a/web-packages/demo/index.html
+++ b/web-packages/demo/index.html
@@ -22,6 +22,7 @@
     <a class="am-list-item" href="html/render-level.html">分层渲染</a>
     <a class="am-list-item" href="html/text.html">文本元素</a>
     <a class="am-list-item" href="html/shape.html">图形元素</a>
+    <a class="am-list-item" href="html/custom-shader.html">自定义材质</a>
     <a class="am-list-item" href="html/context-lost-restore.html">WebGL Context Lost/Restore</a>
     <a class="am-list-item" href="html/post-processing.html">后处理测试</a>
     <a class="am-list-item" href="html/hit-test.html">射线碰撞检测测试</a>
