feat: 更新了快照，方便在复刻静帧

--- a/web-packages/demo/html/custom-shader.html
+++ b/web-packages/demo/html/custom-shader.html
@@ -14,7 +14,11 @@
   </style>
 </head>
 <body>
-<div class="container" id="J-container"></div>
+<div class="container" id="J-container">
+  <button id="capture-btn" style="position: absolute; top: 10px; right: 10px; z-index: 100; padding: 5px 10px; background: #4CAF50; color: white; border: none; border-radius: 3px; cursor: pointer;">
+    捕获快照
+  </button>
+</div>
 
 <script type="module" src="../src/custom-shader.ts"></script>
 </body>
