feat: rich text parser support escape

--- a/plugin-packages/rich-text/demo/index.html
+++ b/plugin-packages/rich-text/demo/index.html
@@ -12,6 +12,8 @@
   <div class="am-list-header">RichText 插件 Demo</div>
   <div class="am-list-body">
     <a href="./simple.html" class="am-list-item">基础使用</a>
+    <a href="./escape.html" class="am-list-item">转义符支持</a>
+    <a href="./custom-interpolation.html" class="am-list-item">自定义插值</a>
   </div>
 </div>
 </body>
