--- a/plugin-packages/rich-text/demo/escape.html
+++ b/plugin-packages/rich-text/demo/escape.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>简单使用 - 富文本 插件 - demo</title>
+  <title>转义符支持 - 富文本 插件 - demo</title>
   <link rel="stylesheet" href="https://gw.alipayobjects.com/as/g/antui/antui/10.1.32/dpl/antui.css"/>
   <style>
     .container {
