feat: 增加动画停止和开始的方法

--- a/web-packages/demo/html/custom-shader.html
+++ b/web-packages/demo/html/custom-shader.html
@@ -18,6 +18,12 @@
   <button id="capture-btn" style="position: absolute; top: 10px; right: 10px; z-index: 100; padding: 5px 10px; background: #4CAF50; color: white; border: none; border-radius: 3px; cursor: pointer;">
     捕获快照
   </button>
+  <button id="stop-btn" style="position: absolute; top: 10px; left: 10px; z-index: 100; padding: 5px 10px; background: #f44336; color: white; border: none; border-radius: 3px; cursor: pointer;">
+    停止
+  </button>
+  <button id="reset-btn" style="position: absolute; top: 50px; left: 10px; z-index: 100; padding: 5px 10px; background: #2196F3; color: white; border: none; border-radius: 3px; cursor: pointer;">
+    重置
+  </button>
 </div>
 
 <script type="module" src="../src/custom-shader.ts"></script>
