feat: add rich-text demo

--- a/web-packages/demo/index.html
+++ b/web-packages/demo/index.html
@@ -21,6 +21,7 @@
     <a class="am-list-item" href="html/dynamic-video.html">动态视频</a>
     <a class="am-list-item" href="html/render-level.html">分层渲染</a>
     <a class="am-list-item" href="html/text.html">文本元素</a>
+    <a class="am-list-item" href="html/rich-text.html">富文本元素</a>
     <a class="am-list-item" href="html/multi-load-type.html">多加载类型</a>
     <a class="am-list-item" href="html/context-lost-restore.html">WebGL Context Lost/Restore</a>
     <a class="am-list-item" href="html/post-processing.html">后处理测试</a>
