feat: fancy text

--- a/web-packages/test/case/index.html
+++ b/web-packages/test/case/index.html
@@ -26,6 +26,10 @@
       <div class="am-list-content">全部测试（多页面并行）</div>
       <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
     </a>
+    <a href="fancy-text.html" class="am-list-item">
+      <div class="am-list-content">花字特效测试</div>
+      <div class="am-list-arrow"><span class="am-icon arrow horizontal"></span></div>
+    </a>
   </div>
 </div>
 </body>
